<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">重庆蔡家</string>
    <string name="fragmentation_stack_help">*: Not in backStack\n☀: Visible</string>
    <string name="fragmentation_stack_view">Stack</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_air_control">空调控制</string>
    <string name="str_arofene_level_jiaocha">较差</string>
    <string name="str_arofene_level_liang">良</string>
    <string name="str_arofene_level_you">优</string>
    <string name="str_arofene_level_zhong">中</string>
    <string name="str_calender">万年历</string>
    <string name="str_cancel">取消</string>
    <string name="str_chuanyi">穿衣指数</string>
    <string name="str_co2_room_in">室内二氧化碳</string>
    <string name="str_default_unit">℃</string>
    <string name="str_del">删除</string>
    <string name="str_fengliang_change">风量调节</string>
    <string name="str_ganmao">感冒指数</string>
    <string name="str_jiaquan_level">甲醛等级</string>
    <string name="str_jiashi">加湿状态</string>
    <string name="str_level_jiaocha">较差</string>
    <string name="str_level_lianghao">良好</string>
    <string name="str_level_shushi">舒适</string>
    <string name="str_level_you">优</string>
    <string name="str_loading">加载中…</string>
    <string name="str_maohao">:</string>
    <string name="str_mode_change">模式调节</string>
    <string name="str_new_wind_control">新风控制</string>
    <string name="str_power_control">电源开关</string>
    <string name="str_put_message">推送消息</string>
    <string name="str_room_in">室内</string>
    <string name="str_room_out">室外</string>
    <string name="str_sleep_set">起床设定</string>
    <string name="str_sport">运动指数</string>
    <string name="str_sure">确定</string>
    <string name="str_temp">温度</string>
    <string name="str_temp_change">温度调节</string>
    <string name="str_temp_in">室内温度</string>
    <string name="str_temp_set">温度设定</string>
    <string name="str_unit_baifenbi">%</string>
    <string name="str_unit_mg">mg/m³</string>
    <string name="str_unit_ppm">PPM</string>
    <string name="str_unit_sheshidu">℃</string>
    <string name="str_voc_room_in">室内VOC</string>
    <string name="str_ziwaixian">紫外线指数</string>
    <string name="toast_message">Toast message</string>
</resources>
