<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_fragment_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20px"
    android:baselineAligned="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="8">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="550">
            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="420">
                <TextView
                    android:text="@string/str_power_control"
                    style="@style/WindTextStyle"/>
                <ImageView
                    android:id="@+id/ivPower"
                    android:layout_width="115px"
                    android:layout_height="135px"
                    android:src="@drawable/icon_power_off"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <include layout="@layout/view_vertical_line"/>
            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="668">
                <TextView
                    android:text="@string/str_new_wind_control"
                    style="@style/WindTextStyle"/>
                <com.dnake.desktop.widget.LandleafView
                    android:id="@+id/myCustomLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:cBoundSize="5"
                    app:cLevelText="@string/str_level_shushi"
                    app:cLevelTextSize="15"
                    app:cLineWidth="15"
                    app:cMaxText="30"
                    app:cMinText="0"
                    app:cProgressText="0.00"
                    app:cProgressTextSize="50"
                    app:cRadius="85"
                    app:cRangeTextSize="15"
                    app:cTriangleWidth="15"/>
            </RelativeLayout>
            <include layout="@layout/view_vertical_line"/>
            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="452">
                <TextView
                    android:text="@string/str_fengliang_change"
                    style="@style/WindTextStyle"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:id="@+id/ivGao"
                        android:layout_width="85px"
                        android:layout_height="40px"
                        android:src="@drawable/icon_gao_off"/>
                    <ImageView
                        android:id="@+id/ivZhong"
                        android:layout_width="85px"
                        android:layout_height="40px"
                        android:layout_marginTop="15px"
                        android:src="@drawable/icon_zhong_off"/>
                    <ImageView
                        android:id="@+id/ivDi"
                        android:layout_width="85px"
                        android:layout_height="40px"
                        android:layout_marginTop="15px"
                        android:src="@drawable/icon_di_off"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <include layout="@layout/view_horizontal_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="150">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <TextView
                    android:text="@string/str_mode_change"
                    style="@style/WindTextStyle"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20px">
                    <ImageView
                        android:id="@+id/ivXiaji"
                        android:layout_width="@dimen/normal_bt_width_dp"
                        android:layout_height="@dimen/normal_bt_height_dp"
                        android:src="@drawable/icon_zhilen_off"/>
                    <ImageView
                        android:id="@+id/ivDongji"
                        android:layout_width="@dimen/normal_bt_width_dp"
                        android:layout_height="@dimen/normal_bt_height_dp"
                        android:src="@drawable/icon_zhire_off"
                        android:layout_marginStart="10px"/>
                    <ImageView
                        android:id="@+id/ivTongfeng"
                        android:layout_width="@dimen/normal_bt_width_dp"
                        android:layout_height="@dimen/normal_bt_height_dp"
                        android:src="@drawable/icon_tongfeng_off"
                        android:layout_marginStart="10px"/>
                    <ImageView
                        android:id="@+id/ivChushi"
                        android:layout_width="@dimen/normal_bt_width_dp"
                        android:layout_height="@dimen/normal_bt_height_dp"
                        android:src="@drawable/icon_chushi_off"
                        android:layout_marginStart="10px"/>
                    <ImageView
                        android:id="@+id/ivZhineng"
                        android:layout_width="@dimen/normal_bt_width_dp"
                        android:layout_height="@dimen/normal_bt_height_dp"
                        android:src="@drawable/icon_fengsu_auto_off"
                        android:layout_marginStart="10px"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2">
                <TextView
                    android:text="@string/str_jiashi"
                    style="@style/WindTextStyle"/>
                <ImageView
                    android:id="@+id/ivJiashi"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/normal_bt_height_dp"
                    android:src="@drawable/icon_jiashi_off"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/view_horizontal_line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:layout_marginStart="40px"
        android:layout_marginEnd="40px">
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:background="@drawable/icon_room_bg_selected"
            android:layout_width="110px"
            android:layout_height="60px"
            android:text="新风机"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>
