<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_fragment_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20px"
    android:baselineAligned="false">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="400">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="420">
            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0px"
                android:layout_weight="1.99">
                <ImageView
                    android:id="@+id/tica_ivPower"
                    android:layout_width="92px"
                    android:layout_height="110px"
                    android:src="@drawable/icon_power_off"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <include layout="@layout/view_horizontal_line"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1.2">
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_temp_logo"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
                <include layout="@layout/view_vertical_line"/>
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="19px"
                        android:textStyle="bold"
                        android:textColor="#05cd06"
                        android:id="@+id/tica_tvTempShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/view_vertical_line"/>
        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="668">
            <com.dnake.desktop.widget.LandleafView
                android:id="@+id/tica_myCustomLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:cBoundSize="5"
                app:cLevelText="@string/str_level_shushi"
                app:cLevelTextSize="15"
                app:cLineWidth="15"
                app:cMaxText="30"
                app:cMinText="0"
                app:cProgressText="0.00"
                app:cProgressTextSize="50"
                app:cRadius="90"
                app:cRangeTextSize="15"
                app:cTriangleWidth="15"/>
        </RelativeLayout>
        <include layout="@layout/view_vertical_line"/>
        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="452">
            <TextView
                android:textSize="19sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:text="@string/str_temp_set"
                android:layout_marginStart="34px"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/tica_ivMinus"
                    android:clickable="true"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:src="@drawable/selector_minus_click"/>
                <ImageView
                    android:id="@+id/tica_ivPlus"
                    android:clickable="true"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:src="@drawable/selector_plus_click"
                    android:layout_marginStart="60px"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <include layout="@layout/view_horizontal_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="180">
        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3px"
                android:text="@string/str_mode_change"
                android:layout_marginStart="10px"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10px">
                <ImageView
                    android:id="@+id/tica_ivZhilen"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_zhilen_off"/>
                <ImageView
                    android:id="@+id/tica_ivZhire"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_zhire_off"
                    android:layout_marginStart="10px"/>
                <ImageView
                    android:id="@+id/tica_ivSongfeng"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_tongfeng_off"
                    android:layout_marginStart="5px"/>
                <ImageView
                    android:id="@+id/tica_ivChushi"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_chushi_off"
                    android:layout_marginStart="5px"/>
            </LinearLayout>
        </RelativeLayout>
        <include layout="@layout/view_vertical_line"/>
        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3px"
                android:text="@string/str_fengliang_change"
                android:layout_marginStart="10px"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10px">
                <ImageView
                    android:id="@+id/tica_fengsu_di"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_fengsu_di_off"/>
                <ImageView
                    android:id="@+id/tica_fengsu_zhong"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_fengsu_zhong_off"
                    android:layout_marginStart="5px"/>
                <ImageView
                    android:id="@+id/tica_fengsu_gao"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_fengsu_gao_off"
                    android:layout_marginStart="5px"/>
                <ImageView
                    android:id="@+id/tica_fengsu_zidong"
                    android:layout_width="90px"
                    android:layout_height="40px"
                    android:src="@drawable/icon_fengsu_auto_off"
                    android:layout_marginStart="5px"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <include layout="@layout/view_horizontal_line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="180"
        android:layout_marginStart="40px"
        android:layout_marginEnd="40px">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</LinearLayout>
